cleanup and better start for installed update